@@ -1,5 +1,7 @@
 *SVN*
 
+* Add deprecation warning for inferred foreign key. #6029 [Josh Susser]
+
 * Fixed the Ruby/MySQL adapter we ship with Active Record to work with the new authentication handshake that was introduced in MySQL 4.1, along with the other protocol changes made at that time #5723 [jimw@mysql.com]
 
 * Deprecation: use :dependent => :delete_all rather than :exclusively_dependent => true.  #6024 [Josh Susser]
